Added my project

--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h2>Latest Work</h2>
-						<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see
-							some for as low as $.17 each.</p>
+						<p>I'm currently working Full-Time, and I'm currently working as a freelancer to gain some knowledge and to be able to learn new skills. My current skills cover Data Analysis, Graphic Design, Web Development, UX & UI.</p>
 					</div>
 				</div>
 
