Added my project

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<li class=""><a class="active" href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="https://anchor.fm/thelast">The Last</a></li>
+						<li><a href="https://anchor.fm/thelast">My Podcast</a></li>
 						<li><a href="https://cofffee.netlify.app/">Cofffee.io</a></li>
 						<li><a href="https://teespring.com/stores/cofffeio">Store</a></li>
 						<li><a href="https://medium.com/school-projects-design">My Resume</a></li>
