--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h2>Latest Work</h2>
-						<p>I'm currently working Full-Time, and I'm currently working as a freelancer to gain some knowledge and to be able to learn new skills. My current skills cover Data Analysis, Graphic Design, Web Development, UX & UI.</p>
+						<p>I'm currently working Full-Time, and I'm currently working as a freelancer to gain some knowledge and to be able to learn new skills. My current skills cover Data Analysis, Graphic Design, Web Development, UX & UI. Click on each project to see my work!</p>
 					</div>
 				</div>
 
@@ -214,7 +214,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w1.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w1.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>E-Commerce</h4>
@@ -227,7 +227,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w2.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w2.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Restaurant</h4>
@@ -240,33 +240,33 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w3.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w3.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Education Website</h4>
 								<div class="cat"> UVU | Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="https://www.uvu.edu/education/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w6.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w6.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Multicultural Website</h4>
 								<div class="cat">UVU | Project</div>
 							</div>
-							<a class="overlay" href="https://www.uvu.edu/education/"></a>
+							<a class="overlay" href="https://www.uvu.edu/multicultural/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w4.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w4.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>The Last</h4>
@@ -279,7 +279,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w5.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w5.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Cofffe.io</h4>
@@ -292,7 +292,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w6.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w7.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Web and App Development </h4>
@@ -305,7 +305,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w4.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w8.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4> UX & UI </h4>
@@ -318,7 +318,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w5.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w9.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>More about me</h4>
@@ -500,7 +500,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/quote.png" alt="">
-						<h4>Fanny Spencer</h4>
+						<h4>Dara Snow</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -510,8 +510,7 @@
 						</ul>
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about it, you travel
-								across her face <br> and She is the host to your journey.
+								Working with him is pretty fun since he is very creative and he is very well-orginized  <br> He will always offer multiple approaches and possible solutions.
 							</p>
 						</div>
 					</div>
@@ -519,7 +518,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/quote.png" alt="">
-						<h4>Fanny Spencer</h4>
+						<h4>Cristina Vazquez</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -529,8 +528,7 @@
 						</ul>
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about it, you travel
-								across her face <br> and She is the host to your journey.
+								I'm happy with the work that he has done at Monalisah <br> He is capable of designing and develop any idea & He is always capable to learn and trying new things.
 							</p>
 						</div>
 					</div>
@@ -538,7 +536,7 @@
 				<div class="item">
 					<div class="testi_item">
 						<img src="img/quote.png" alt="">
-						<h4>Fanny Spencer</h4>
+						<h4>Daniel Esparza</h4>
 						<ul class="list">
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
 							<li><a href="#"><i class="fa fa-star"></i></a></li>
@@ -548,8 +546,7 @@
 						</ul>
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If you think about it, you travel
-								across her face <br> and She is the host to your journey.
+								Alan provides strong evidence of low-fidelity and high-fidelity design concepts <br> and He always initiates and execute creative ideas such as new User Experiences concepts for our app.
 							</p>
 						</div>
 					</div>
