--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h2>Latest Work</h2>
-						<p>I'm currently working Full-Time, and I'm currently working as a freelancer to gain some knowledge and to be able to learn new skills. My current skills cover Data Analysis, Graphic Design, Web Development, UX & UI.</p>
+						<p>I'm currently working Full-Time, and I'm currently working as a freelancer to gain some knowledge and to be able to learn new skills. My current skills cover Data Analysis, Graphic Design, Web Development, UX & UI. Click on each project to see my work!</p>
 					</div>
 				</div>
 
@@ -119,7 +119,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w1.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w1.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>E-Commerce</h4>
@@ -132,7 +132,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w2.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w2.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Restaurant</h4>
@@ -145,33 +145,33 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w3.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w3.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Education Website</h4>
 								<div class="cat"> UVU | Project</div>
 							</div>
-							<a class="overlay" href="portfolio-details.html"></a>
+							<a class="overlay" href="https://www.uvu.edu/education/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w6.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w6.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Multicultural Website</h4>
 								<div class="cat">UVU | Project</div>
 							</div>
-							<a class="overlay" href="https://www.uvu.edu/education/"></a>
+							<a class="overlay" href="https://www.uvu.edu/multicultural/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w4.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w4.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>The Last</h4>
@@ -184,7 +184,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w5.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w5.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Cofffe.io</h4>
@@ -197,7 +197,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w6.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w7.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>Web and App Development </h4>
@@ -210,7 +210,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w4.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w8.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4> UX & UI </h4>
@@ -223,7 +223,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/work/w5.jpg" alt="">
+								<img class="image img-fluid" src="img/UX/w9.jpg" alt="">
 							</div>
 							<div class="middle">
 								<h4>More about me</h4>
