Added my project

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 						</ul>
 						<div class="wow fadeIn" data-wow-duration="1s">
 							<p>
-								Alan provides strong evidence of low-fidelity and high-fidelity design concepts <br> and He always initiates and execute creative ideas such as new User Experiences concepts for our app.
+								Alan provides strong evidence of low-fidelity and high-fidelity design concepts <br> and He always initiates and execute creative ideas such as new User Experiences concepts for our products & Services.
 							</p>
 						</div>
 					</div>
