--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="portfolio.html">Portfolio</a></li>
 						<li><a href="https://anchor.fm/thelast">My Podcast</a></li>
-						<li><a href="https://cofffee.netlify.app/">Cofffee.io</a></li>
+						<li><a href="https://unsplash.com/@hvaandres">My Photos</a></li>
 						<li><a href="https://teespring.com/stores/cofffeio">Store</a></li>
-						<li><a href="https://medium.com/school-projects-design">My Resume</a></li>
+						<li><a href="./img/Alan's_Resume.pdf">My Resume</a></li>
 						
 					</ul>
 				</nav>
@@ -88,15 +88,15 @@
 		<div class="container">
 			<div class="row fullscreen d-flex align-items-center">
 				<div class="banner-content col-lg-6 col-md-12 justify-content-center ">
-					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">Hello Mi Gente!</div>
+					<div class="me wow fadeInDown" data-wow-duration="1s" data-wow-delay="1.2s">Hello People!</div>
 					<h1 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.7s">Alan A. Haro</h1>
 					<div class="designation mb-50 wow fadeInUp" data-wow-duration="1s" data-wow-delay="2.1s">
-						UX
-						<span class="designer">Designer</span>
-						and Front-End
-						<span class="developer">Engineer</span>
+						I am an
+						<span class="designer">Engineer</span>
+						that can solve
+						<span class="developer">Problems</span>
 					</div>
-					<a href="mailto:hvaandres@icloud.com" target="_blank" class="primary-btn" data-text="Hire Me">
+					<a href="mailto:hvaandres@uxdeveloper.dev" target="_blank" class="primary-btn" data-text="Hire Me">
 						<span>H</span>
 						<span>i</span>
 						<span>r</span>
@@ -107,7 +107,7 @@
 					</a>
 				</div>
 				<div class="banner-img col-lg-6 col-md-6 align-self-end">
-					<img class="img-fluid" src="img/banner-img.png" alt="">
+					<img class="img-fluid" src="#" alt="">
 				</div>
 			</div>
 		</div>
@@ -135,6 +135,12 @@
 					<div class="col single-brand">
 						<a href="https://cofffee.netlify.app/"><img class="mx-auto" src="img/brand/b5.png" alt=""></a>
 					</div>
+					<div class="col single-brand">
+						<a href="https://cofffee.netlify.app/"><img class="mx-auto" src="img/brand/b6.svg" alt="" width="20px" height="20px"></a>
+					</div>
+					<div class="col single-brand">
+						<a href="https://cofffee.netlify.app/"><img class="mx-auto" src="img/brand/b7.png" alt="" width="20px" height="20px"></a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -147,7 +153,7 @@
 		<div class="container">
 			<div class="row align-items-center justify-content-between">
 				<div class="col-lg-6 about-left">
-					<img class="img-fluid" src="img/about-img.jpg" alt="">
+					<img class="img-fluid" src="img/about-img.png" alt="">
 				</div>
 				<div class="col-lg-5 col-md-12 about-right">
 					<div class="section-title">
@@ -155,22 +161,19 @@
 					</div>
 					<div class="mb-50 wow fadeIn" data-wow-duration=".8s">
 						<p>
-							I’m a UX Designer & Front-End Developer with a passion for solving issues. Also, I love to work hard and put a lot of effort into things that I do not know yet. For the same reason, I always like to become part of every problem to be able to be part of the solution. 
+							I am an Engineer with a passion for UX, Development, Automation & IT with the intention of creating new, and innovating ideas to solve common problems. I love being involved in the problem to be part of the solution. My specialty is finding the best solution for the end-user with the right software and the right tools.
 						</p>
 				
 					</div>
-					<a href="https://medium.com/school-projects-design" class="primary-btn white" data-text="More Info">
-						<span>M</span>
-						<span>o</span>
-						<span>r</span>
-						<span>e</span>
-						<span> </span>
-						<span>I</span>
-						<span>n</span>
-						<span>f</span>
-						<span>o</span>
+					<a href="https://github.com/hvaandres" class="primary-btn" data-text="GitHub">
+						<span>G</span>
+						<span>i</span>
+						<span>t</span>
+						<span>H</span>
+						<span>u</span>
+						<span>b</span>
 					</a>
-					<a href="img/resume.pdf" class="primary-btn" data-text="Resume">
+					<a href="./img/Alan's_Resume.pdf" class="primary-btn" data-text="Resume">
 						<span>R</span>
 						<span>e</span>
 						<span>s</span>
@@ -192,7 +195,7 @@
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h2>Latest Work</h2>
-						<p>I'm currently working Full-Time, and I'm currently working as a freelancer to gain some knowledge and to be able to learn new skills. My current skills cover Data Analysis, Graphic Design, Web Development, UX & UI. Click on each project to see my work!</p>
+						<p>I'm currently working as a Software Automation Engineer where I'm developing new startegies to build test scenarios to be able to manipulate them through Cypress and Bitbucket Pipelines. Also, I'm currently working as a freelancer with the intention on gaining and developing more skills like mobile development, networking security, and ux design.</p>
 					</div>
 				</div>
 
@@ -214,7 +217,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w1.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/1.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>E-Commerce</h4>
@@ -227,7 +230,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w2.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/3.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>Restaurant</h4>
@@ -240,7 +243,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w3.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/4.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>Education Website</h4>
@@ -253,7 +256,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w6.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/5.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>Multicultural Website</h4>
@@ -266,7 +269,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w4.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/6.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>The Last</h4>
@@ -279,7 +282,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w5.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/7.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>Cofffe.io</h4>
@@ -292,7 +295,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w7.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/8.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>Web and App Development </h4>
@@ -305,7 +308,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w8.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/9.png" alt="">
 							</div>
 							<div class="middle">
 								<h4> UX & UI </h4>
@@ -318,7 +321,47 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="img/UX/w9.jpg" alt="">
+								<img class="image img-fluid" src="./img/UX/Projects/10.png" alt="">
+							</div>
+							<div class="middle">
+								<h4>More about me</h4>
+								<div class="cat">Medium | Project</div>
+							</div>
+							<a class="overlay" href="https://medium.com/@ithvaandres"></a>
+						</div>
+					</div>
+
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="./img/UX/Projects/11.png" alt="">
+							</div>
+							<div class="middle">
+								<h4>Web and App Development </h4>
+								<div class="cat">Blog | Project</div>
+							</div>
+							<a class="overlay" href="https://medium.com/the-last"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="./img/UX/Projects/12.png" alt="">
+							</div>
+							<div class="middle">
+								<h4> UX & UI </h4>
+								<div class="cat">Case Study | Project</div>
+							</div>
+							<a class="overlay" href="https://medium.com/school-projects-design"></a>
+						</div>
+					</div>
+					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="./img/UX/Projects/13.png" alt="">
 							</div>
 							<div class="middle">
 								<h4>More about me</h4>
@@ -351,15 +394,38 @@
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
+								<h4>Software A. Engineer</h4>
+								<p>Celtic Bank, Utah</p>
+							</div>
+							<div class="top-right">
+								<a href="#" class="primary-btn" data-text="Jan '20 to Present">
+									<span>D</span><span>e</span><span>c</span>
+									<span>'</span><span>2</span><span>0</span>
+									<span>t</span><span>o</span>
+									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+								</a>
+							</div>
+						</div>
+						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+							Building new startegies to develop scenarios for automation within web apps and salesforce.
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-6">
+					<div class="single-job">
+						<div class="top-sec d-flex justify-content-between">
+							<div class="top-left">
 								<h4>UX Designer</h4>
 								<p>Cofffee.io, Utah</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="Jan '20 to Present">
+								<a href="#" class="primary-btn" data-text="Jan '20 to Mar '21">
 									<span>J</span><span>a</span><span>n</span>
 									<span>'</span><span>2</span><span>0</span>
 									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+									<span>M</span><span>a</span><span>r</span>
+									<span>'</span><span>2</span><span>1</span>
 								</a>
 							</div>
 						</div>
@@ -377,11 +443,12 @@
 								<p>Digicert, Utah</p>
 							</div>
 							<div class="top-right">
-								<a href="#" class="primary-btn" data-text="May '20 to Present">
+								<a href="#" class="primary-btn" data-text="May '20 to Mar '21">
 									<span>M</span><span>a</span><span>y</span>
 									<span>'</span><span>2</span><span>20</span>
 									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+									<span>M</span><span>a</span><span>r</span>
+									<span>'</span><span>2</span><span>1</span>
 								</a>
 							</div>
 						</div>
@@ -419,7 +486,7 @@
 						<div class="top-sec d-flex justify-content-between">
 							<div class="top-left">
 								<h4>Software QA Engineer</h4>
-								<p>SuperLumin, New Yorkt</p>
+								<p>SuperLumin, Utah</p>
 							</div>
 							<div class="top-right">
 								<a href="#" class="primary-btn" data-text="Nov '19 to Apr '20">
@@ -448,8 +515,8 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="section-title">
-						<h2>Service Offers</h2>
-						<p>If you need some help, please feel free to reach out to me, and I will be more than happy to help you.</p>
+						<h2>Freelance Work</h2>
+						<p>Now, I can assists you with UX Design, Automation, IT & Security, Mobile Apps, and Web Apps. Please feel free to reach me out at anytime, and I would be more than happy to help!</p>
 					</div>
 				</div>
 			</div>
@@ -458,17 +525,17 @@
 					<div class="single-service wow fadeInUp" data-wow-duration="1s">
 						<span class="lnr lnr-screen"></span>
 						<h4>
-							<span>Web</span> Devlopment
+							<span>Web</span> Automation
 						</h4>
-						<p>HTML, CSS, Javascript, Python, VueJs, Boostrap, SQL & Wordpress.</p>
+						<p> I can build and test any tool that you need for your Web apps, Mobile apps, IT and security. </p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
 						<span class="lnr lnr-laptop-phone"></span>
-						<h4><span>Marketing</span> Analysis
+						<h4><span>Marketing</span> Tools
 						</h4>
-						<p>SEO, Google Search Console, Tag Manager, Analytics & Ads.</p>
+						<p>I can help you to build better SEO, Google Search Console, Tag Manager, Analytics & Ads.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
@@ -476,7 +543,7 @@
 						<span class="lnr lnr-database"></span>
 						<h4><span>App</span> Development
 						</h4>
-						<p>React Native, iOS, Android, Flutter. Design and Building apps is Fun.</p>
+						<p>I can build and deploy your dream app within Swift, Kotlin, Flutter & React Native through the App & Play Store</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
@@ -484,7 +551,7 @@
 						<span class="lnr lnr-chart-bars"></span>
 						<h4><span>Data</span> Analysis
 						</h4>
-						<p>Domo, Google Analytics & CM-Rush. Explaining Data is important.</p>
+						<p>I can help you to analyse and understand your data within Domo, Google Analytics & CM-Rush.</p>
 					</div>
 				</div>
 			</div>
@@ -572,12 +639,12 @@
 			<div class="row mt-80">
 				<div class="col-lg-4 col-md-4">
 					<div class="contact-box">
-						<h4>+1(385)448-0738</h4>
+						<h4>+1(385)505-2608</h4>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<div class="contact-box">
-						<h4>hvaandres@icloud.com</h4>
+						<h4>hvaandres@uxdeveloper.dev</h4>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4">
@@ -633,7 +700,7 @@
 			<div class="row footer-bottom justify-content-center">
 				<p class="col-lg-8 col-sm-12 footer-text">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  <i class="fa fa-bolt" aria-hidden="true"></i> by <a href="https://uxdeveloper.dev" target="_blank">UX Developer</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		</div>
