--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
 						<li class=""><a class="active" href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
+						<li><a href="https://www.youtube.com/channel/UCgWt5jQo5OLyMdlR0FbSmEQ">Youtube</a></li>
+						<li><a href="https://github.com/hvaandres">Github</a></li>
 						<li><a href="https://anchor.fm/thelast">My Podcast</a></li>
 						<li><a href="https://unsplash.com/@hvaandres">My Photos</a></li>
 						<li><a href="https://teespring.com/stores/cofffeio">Store</a></li>
