New updates ready

--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 					<div class="section-title">
 						<h2>Latest Work</h2>
 						<p>I'm currently working as a Software Automation Engineer where I'm developing new startegies to build test scenarios to be able to manipulate them through Cypress and Bitbucket Pipelines. Also, I'm currently working as a freelancer with the intention on gaining and developing more skills like mobile development, networking security, and ux design.</p>
+						<br>
+						<p>Please click and check my projects:</p>
 					</div>
 				</div>
 
@@ -220,10 +222,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/1.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>E-Commerce</h4>
-								<div class="cat">FDS-Fence Distributors | Project</div>
+								<h4>Restaurant Website</h4>
+								<div class="cat">El Taptio</div>
 							</div>
-							<a class="overlay" href="https://www.yournextfence.com/"></a>
+							<a class="overlay" href="https://tapatio.us/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -233,10 +235,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/3.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>Restaurant</h4>
-								<div class="cat">El Tapatio | Project</div>
+								<h4>Restaurant Website</h4>
+								<div class="cat">Irashai</div>
 							</div>
-							<a class="overlay" href="https://eltapatio.netlify.app/"></a>
+							<a class="overlay" href="https://irasshai.us/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.4s">
@@ -246,10 +248,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/4.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>Education Website</h4>
-								<div class="cat"> UVU | Project</div>
+								<h4>E-commerce</h4>
+								<div class="cat"> FDS Company</div>
 							</div>
-							<a class="overlay" href="https://www.uvu.edu/education/"></a>
+							<a class="overlay" href="https://www.trexfencingfds.com/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s">
@@ -272,10 +274,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/6.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>The Last</h4>
-								<div class="cat">Podcast | Project</div>
+								<h4>Education Website</h4>
+								<div class="cat">UVU | Project</div>
 							</div>
-							<a class="overlay" href="https://anchor.fm/thelast/episodes/Web-Developer-Student---UVU-e8t4n6"></a>
+							<a class="overlay" href="https://www.uvu.edu/education/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -285,10 +287,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/7.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>Cofffe.io</h4>
-								<div class="cat">My Business | Project</div>
+								<h4>Blog - React App</h4>
+								<div class="cat">We can build and write a blog</div>
 							</div>
-							<a class="overlay" href="https://cofffee.netlify.app/"></a>
+							<a class="overlay" href="https://github.com/hvaandres/AAH-react-portfolio"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.6s">
@@ -298,10 +300,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/8.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>Web and App Development </h4>
-								<div class="cat">Blog | Project</div>
+								<h4>Linkedin Bot </h4>
+								<div class="cat">The easiest way to apply for a job</div>
 							</div>
-							<a class="overlay" href="https://medium.com/the-last"></a>
+							<a class="overlay" href="https://github.com/hvaandres/Job_Hunter_Bot_LinkedIn"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
@@ -311,10 +313,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/9.png" alt="">
 							</div>
 							<div class="middle">
-								<h4> UX & UI </h4>
-								<div class="cat">Case Study | Project</div>
+								<h4> Creating a Rest-API </h4>
+								<div class="cat">Let's build a database with Nodejs and Mongo-DB</div>
 							</div>
-							<a class="overlay" href="https://medium.com/school-projects-design"></a>
+							<a class="overlay" href="https://github.com/hvaandres/RESTful_API_Mongodb_Express"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -324,10 +326,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/10.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>More about me</h4>
-								<div class="cat">Medium | Project</div>
+								<h4>To-Do List</h4>
+								<div class="cat">Let's build our reminder for our tasks with React</div>
 							</div>
-							<a class="overlay" href="https://medium.com/@ithvaandres"></a>
+							<a class="overlay" href="https://ah-todolist.netlify.app/"></a>
 						</div>
 					</div>
 
@@ -338,10 +340,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/11.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>Web and App Development </h4>
-								<div class="cat">Blog | Project</div>
+								<h4>E-comerce shopping cart </h4>
+								<div class="cat">Let's build a cart with some real items with react and commercejs</div>
 							</div>
-							<a class="overlay" href="https://medium.com/the-last"></a>
+							<a class="overlay" href="https://ah-ecommerce.netlify.app"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all creative wow fadeInUp" data-wow-duration="2s">
@@ -351,10 +353,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/12.png" alt="">
 							</div>
 							<div class="middle">
-								<h4> UX & UI </h4>
-								<div class="cat">Case Study | Project</div>
+								<h4> Car-Shop Website </h4>
+								<div class="cat">Let's build a website for a small business</div>
 							</div>
-							<a class="overlay" href="https://medium.com/school-projects-design"></a>
+							<a class="overlay" href="https://luxclubworx.netlify.app/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -364,8 +366,8 @@
 								<img class="image img-fluid" src="./img/UX/Projects/13.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>More about me</h4>
-								<div class="cat">Medium | Project</div>
+								<h4>Cypress Automation</h4>
+								<div class="cat">Let's create a project and some test scenarios and make sure it passed the test inside of the pipeline</div>
 							</div>
 							<a class="overlay" href="https://medium.com/@ithvaandres"></a>
 						</div>
