meta tags added

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	<!-- Favicon-->
 	<link rel="shortcut icon" href="img/fav.png">
 	<!-- Author Meta -->
-	<meta name="author" content="colorlib">
+	<meta name="author" content="Alan Andres Haro">
 	<!-- Meta Description -->
-	<meta name="description" content="">
+	<meta name="description" content="Porfolio">
 	<!-- Meta Keyword -->
-	<meta name="keywords" content="">
+	<meta name="keywords" content="portfolio, alan andres haro, alan haro, alan haro portfolio, webdesigner, software engineer, content creator">
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
