--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- Meta Description -->
 	<meta name="description" content="Porfolio">
 	<!-- Meta Keyword -->
-	<meta name="keywords" content="portfolio, alan andres haro, alan haro, alan haro portfolio, webdesigner, software engineer, content creator">
+	<meta name="keywords" content="portfolio, alan andres haro, alan haro, alan haro portfolio, webdesigner, software engineer, content creator, alan andres haro content creator, alan andres haro web designer, web designer utah, software developer utah">
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
