--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 								<h4>Cypress Automation</h4>
 								<div class="cat">Let's create a project and some test scenarios and make sure it passed the test inside of the pipeline</div>
 							</div>
-							<a class="overlay" href="https://medium.com/@ithvaandres"></a>
+							<a class="overlay" href="https://github.com/hvaandres/Cypress_Testing_Reports/actions"></a>
 						</div>
 					</div>
 				</div>
