adding new links and updating my work timelines

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 						<li class=""><a class="active" href="index.html">Home</a></li>
 						<li><a href="https://www.youtube.com/channel/UCgWt5jQo5OLyMdlR0FbSmEQ">Youtube</a></li>
 						<li><a href="https://github.com/hvaandres">Github</a></li>
-						<li><a href="https://anchor.fm/thelast">My Podcast</a></li>
-						<li><a href="https://unsplash.com/@hvaandres">My Photos</a></li>
-						<li><a href="https://teespring.com/stores/cofffeio">Store</a></li>
+						<li><a href="https://calendly.com/madebyuxdev">Chats 1:1</a></li>
+						<li><a href="https://unsplash.com/@hvaandres">Happy Snapper</a></li>
+						<li><a href="https://www.buymeacoffee.com/hvaandres">Buy Me A Coffee</a></li>
 						<li><a href="./img/Alan's_Resume.pdf">My Resume</a></li>
 						
 					</ul>
@@ -195,7 +195,7 @@
 				<div class="col-lg-6">
 					<div class="section-title">
 						<h2>Latest Work</h2>
-						<p>I'm currently working as a Software Automation Engineer where I'm developing new startegies to build test scenarios to be able to manipulate them through Cypress and Bitbucket Pipelines. Also, I'm currently working as a freelancer with the intention on gaining and developing more skills like mobile development, networking security, and ux design.</p>
+						<p>I'm currently working as a DevOps & Site Relability Engineer where I'm developing new startegies to build Infrstructure as Code, Building CI/CD Pipelines, Automation Scripts and many more task</p>
 						<br>
 						<p>Please click and check my projects:</p>
 					</div>
@@ -222,10 +222,10 @@
 								<img class="image img-fluid" src="./img/UX/Projects/1.png" alt="">
 							</div>
 							<div class="middle">
-								<h4>Restaurant Website</h4>
-								<div class="cat">El Taptio</div>
+								<h4>Medical Assistant Website</h4>
+								<div class="cat">Salud y Figura</div>
 							</div>
-							<a class="overlay" href="https://tapatio.us/"></a>
+							<a class="overlay" href="https://saludyfigura.mx/"></a>
 						</div>
 					</div>
 					<div class="single-work col-lg-4 col-md-6 col-sm-12 all web-design branding wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s">
@@ -392,6 +392,76 @@
 			</div>
 
 			<div class="row">
+
+				<div class="col-lg-6">
+					<div class="single-job">
+						<div class="top-sec d-flex justify-content-between">
+							<div class="top-left">
+								<h4>DevOps Engineer</h4>
+								<p>Datashield, Utah</p>
+							</div>
+							<div class="top-right">
+								<a href="#" class="primary-btn" data-text="Current">
+									<span>A</span><span>u</span><span>g</span>
+									<span>'</span><span>2</span><span>1</span>
+									<span>t</span><span>o</span>
+									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+								</a>
+							</div>
+						</div>
+						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+							Building infrastructure as code to maintain all the cloud services that are being used by the Software Architects and Software Engineers.
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-6">
+					<div class="single-job">
+						<div class="top-sec d-flex justify-content-between">
+							<div class="top-left">
+								<h4>GDG - Mentor</h4>
+								<p>Google Developer Program, Utah</p>
+							</div>
+							<div class="top-right">
+								<a href="#" class="primary-btn" data-text="Current">
+									<span>M</span><span>a</span><span>r</span>
+									<span>'</span><span>2</span><span>1</span>
+									<span>t</span><span>o</span>
+									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+								</a>
+							</div>
+						</div>
+						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+							Building and Mentoring a new community of New Engineers.
+						</div>
+					</div>
+				</div>
+
+
+				<div class="col-lg-6">
+					<div class="single-job">
+						<div class="top-sec d-flex justify-content-between">
+							<div class="top-left">
+								<h4>DevOps Engineer Mentor</h4>
+								<p>Google Developer Program, Utah</p>
+							</div>
+							<div class="top-right">
+								<a href="#" class="primary-btn" data-text="Current">
+									<span>J</span><span>a</span><span>n</span>
+									<span>'</span><span>2</span><span>2</span>
+									<span>t</span><span>o</span>
+									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+								</a>
+							</div>
+						</div>
+						<div class="bottom-sec wow fadeIn" data-wow-duration="2s">
+							Mentoring new students to get skills as a DevOps Egineer & Cloud Engineer.
+						</div>
+					</div>
+				</div>
+
+
+
 				<div class="col-lg-6">
 					<div class="single-job">
 						<div class="top-sec d-flex justify-content-between">
@@ -404,7 +474,7 @@
 									<span>D</span><span>e</span><span>c</span>
 									<span>'</span><span>2</span><span>0</span>
 									<span>t</span><span>o</span>
-									<span>P</span><span>r</span><span>e</span><span>s</span><span>e</span><span>n</span><span>t</span>
+									<span>A</span><span>u</span><span>g</span><span>2</span><span>1</span>
 								</a>
 							</div>
 						</div>
@@ -527,17 +597,17 @@
 					<div class="single-service wow fadeInUp" data-wow-duration="1s">
 						<span class="lnr lnr-screen"></span>
 						<h4>
-							<span>Web</span> Automation
+							<span>Web</span> Development
 						</h4>
-						<p> I can build and test any tool that you need for your Web apps, Mobile apps, IT and security. </p>
+						<p> I can help you to design the website of your dreams & willing to help with new ideas for a new path. </p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
 						<span class="lnr lnr-laptop-phone"></span>
-						<h4><span>Marketing</span> Tools
+						<h4><span>Software</span> Automation
 						</h4>
-						<p>I can help you to build better SEO, Google Search Console, Tag Manager, Analytics & Ads.</p>
+						<p>I can help you to automate your day to day life by using code to make sure you save money and time.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
@@ -545,15 +615,15 @@
 						<span class="lnr lnr-database"></span>
 						<h4><span>App</span> Development
 						</h4>
-						<p>I can build and deploy your dream app within Swift, Kotlin, Flutter & React Native through the App & Play Store</p>
+						<p>I can help you to architecture and design your new app for the most popular platforms like Android & iOS.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
 						<span class="lnr lnr-chart-bars"></span>
-						<h4><span>Data</span> Analysis
+						<h4><span>DevOps</span> & Site Reliability
 						</h4>
-						<p>I can help you to analyse and understand your data within Domo, Google Analytics & CM-Rush.</p>
+						<p>I can help you to build and manage your Cloud Services to mantain your current code secure and up-to-date. </p>
 					</div>
 				</div>
 			</div>
